--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3464,6 +3464,7 @@ white = #fff
 	// 	height: 250px;
 
 	.nextButton
+		z-index 99
 		position absolute
 		right 0
 		// top 50%
@@ -3478,6 +3479,7 @@ white = #fff
 		cursor pointer
 		padding 0
 	.prevButton
+		z-index 99
 		padding 0
 		cursor pointer
 		margin 10px 0
