add users num of followers in profile

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -132,9 +132,9 @@
 				    <td><span>{{profile.views}}</span></td>
 				  </tr>
 				  <tr>
-				    <td><i class="bi_ecommerce-diamon"></i></td>
-				    <td><p>VALORACIONES</p></td>
-				    <td><span class="likes">{{numbers[4]}}</span></td>
+				    <td><i class="bi_user-single-a-plus"></i></td>
+				    <td><p>SEGUIDORES</p></td>
+				    <td><span class="likes ">{{numbers[4]}}</span></td>
 				  </tr>
 				</table>
 			</div>
