--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -362,7 +362,7 @@
 	          <form class="content review-form">
 	            <input type="hidden" name='id{{entity|capitalize}}' value="{{work.id}}"/>
 	            <textarea class='value-input' name="value"></textarea>
-	            <button>AGREGAR REVIEW</button>
+	            <button>AGREGAR COMENTARIO</button>
 	          </form>
 	      	</div>
         {% else %}
