--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -46,6 +46,11 @@ white = #fff
 *------------------------------------*/
 @import 'filters.styl'
 
+/*------------------------------------*
+	$ FILTERS
+*------------------------------------*/
+@import 'tv.styl'
+
 
 /*------------------------------------*
 	$ LOADING
