--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -174,7 +174,7 @@
 		</div>
 		<div class="body-inner">
 			<div class="cover"></div>
-			{% block elements %} {% endblock %}
+			{% block elements %} hola {% endblock %}
 		</div>
 	</div>
 
