--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,9 +1,72 @@
-body
-	background gray
 .contenedor
 	width 100%
 	display flex
 	justify-content center
 	&-video
-		width 700px
+		width 100%
 		height 400px
+.sub-contenedor
+	width 100%
+	display flex
+	justify-content center
+	&-video
+		width 50%
+		height 400px
+.description
+	width 100%
+	display flex
+	justify-content space-around
+	align-items baseline
+	background-color rgba(0, 0, 0, 0.06)
+	&-likes
+		width 200px
+		display flex
+		flex-direction column
+		&-logos
+			display flex
+			justify-content space-around
+		&-redes
+			display flex
+			justify-content space-around
+	&-texto
+		width 500px
+		text-align left
+		display flex
+		flex-direction column
+		justify-content center
+		padding 15px 0px
+	&-texto h3
+		font-family sans-serif
+		font-size 26px
+		color #ff1c1c
+		margin 0 5px 0
+	&-texto p
+		font-family sans-serif
+		font-size 18px
+		color blue
+		margin 10px 5px 0
+	&-texto span
+		font-family sans-serif
+		font-size 12px
+		color red
+		margin 15px 5px 0
+.info
+	width 100%
+	text-align left
+	display flex
+	flex-direction column
+	justify-content center
+	padding 0 25px
+.info h3
+	font-family sans-serif
+	font-size 26px
+	color #ff1c1c
+.info p
+	font-family sans-serif
+	font-size 18px
+	color blue
+.info span
+	font-family sans-serif
+	font-size 12px
+	color red
+
