--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -49,6 +49,8 @@ white = #fff
 /*------------------------------------*
 	$ FILTERS
 *------------------------------------*/
+@import 'tv-chapter.styl'
+
 @import 'tv.styl'
 
 /*------------------------------------*
