--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,4 +1,115 @@
-.contenedor
+.container
 	width 100%
-	height 450px
+	height 500px
+	background-color #000
+	&-text
+		display flex
+		flex-direction column
+		z-index 2
+		color #fff
+		align-items center
+		margin-top 240px
+	&-text h3
+		z-index 2
+		font-size 44px
+		font-family montserrat
+		padding 5px 0
+		font-weight bold
+	&-text p
+		z-index 2
+		font-size 22px
+		text-align center
+		font-family PTSerif-Regular
+.container video
+	width 100%
+	height 500px
+	position absolute
+	left 0
+	top 0
+.container subBarra
+	width 100%
+	display flex
+	justify-content space-around
+.subList
+	display flex
+	align-items	baseline
+	&-title
+		font-size 40px
+		padding 20px 360px 20px 120px
+		font-family Montserrat
+		font-weight bold
+		color #fff
+	&-item
+		padding 30px
+		color #fff
+		font-family Montserrat
+		font-size 13px
+.subList li
+	z-index 2
+.buttom
+	width 100px
+	font-family montserrat
 	background-color red
+	color #fff
+	z-index 2
+	padding 13px
+	margin 17px 0
+.contest
+	border 1px solid #fff
+	padding 15px 20px
+	border-radius 40px
+	margin-left 25px
+.info h2
+	font-size 27px
+	font-family Montserrat
+	font-weight bold
+	padding 6px 0
+.likes
+	display flex
+	&-logo
+		width 160px
+		display flex
+		align-items baseline
+		justify-content space-around
+.info
+	padding 9px 80px
+	&-data
+		width 100%
+		display flex
+		justify-content space-between
+		&-text
+			width 720px
+			&-imagen
+				margin 15px 0
+			&-imagen img
+				height 353px
+				width 100%
+		&-text video
+			width 100%
+			height 300px
+		&-text p
+			font-family PTSerif-Regular
+			padding 8px 0px
+		&-text h2
+			font-size 20px !important
+		&-baners
+			width 240px
+			display flex
+			flex-direction column
+			&-view
+				border 1px solid #ececec
+				background-color #ececec
+				width 240px
+				height 350px
+				margin 20px 0
+	&-text
+		display flex
+		justify-content space-between
+		&-icon h3
+			margin-bottom 12px
+			&-social
+				display flex
+				justify-content space-around
+.am-Footer
+	background #3c3d41
+	margin-top 200px
