--- a/app/views/tv/creator.html
+++ b/app/views/tv/creator.html
@@ -1,10 +1,128 @@
-<html>
-<head>
-	<title>tu mama</title>
-</head>
-<body>
-<script type="text/javascript">
-	console.log({{cloudinary|json|safe}})
-</script>
-</body>
-</html>
+{% extends '../partials/base.html' %}
+{% set pageTitle = 'Agregar Obra' %}
+
+{% block elements %}
+<div class="am-upload-work">
+	<div class="am-upload-work-box grid-container">
+		<form class="work-form">
+			<p class="main-title">CREAR NUEVO CAPITULO</p>
+			<div class="grid-100">
+				<div class="separator">
+					<span class="line"></span><span class="text">MINIATURA DEL CAPITULO</span><span class="line"></span>
+				</div>
+				<div class="uploader-work">
+					<div class="profile-imgage">
+						<div class="preview">
+						</div>
+					</div>
+					<div class="preload hide"><i class="fa fa-spinner"></i></div>
+					<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
+				</div>
+				<div class="image-uploader" style="position:relative;">
+					{{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: { style: "width:230px;height:55px;top:-70px;left: 105px;" } })}}
+				</div>
+				<div class="separator">
+					<span class="line"></span><span class="text">DATOS DEL CAPITULO</span><span class="line"></span>
+				</div>
+				<p class="title">Nombre del capitulo</p>
+				<input name='name' class="input input-modal" type="text" placeholder="Ingrese el nombre"/>
+			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<p class="title">Video del capitulo (URL YouTube)</p>
+				<input name='video' class="input input-modal" type="text" placeholder="Ingrese la URL del video"/>
+			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<p class="title">Fecha de emision</p>
+				<input id="date" class="input" type="text" name='birthday' value="" placeholder="dd/mm/yy" maxlength="8">
+			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<p class="title">Descripcion del capitulo</p>
+				<textarea name='description' class='input' placeholder="Descripcion" maxlength='140'></textarea>
+			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<div class="separator">
+					<span class="line"></span><span class="text">ACCIONES</span><span class="line"></span>
+				</div>
+				<button class="button u-margin-top-30 send" data-color="blue">SUBIR OBRA</button>
+				<div class="hide send-loading">
+					<button class="button u-margin-top-30" data-color="blue">
+						<i class="load fa fa-spinner"></i>
+					</button>
+				</div>
+			</div>
+		</form>
+
+		<div class="hide work-published">
+			<div class="grid-100">
+	  		<p class="main-title">TU OBRA SE HA PUBLICADO CON ÉXITO</p>
+	  		<div class="u-separator"></div>
+	  		<div class="work-collection-card u-margin-top-40">
+	  			<div class="work-collection-card-img">
+						<img class="work-photo-published">
+	  			</div>
+	  			<div class="work-collection-card-data">
+	  				<p class="work-collection-card-title work-name-published"></p>
+	  				<p class="work-collection-card-artist work-user-published"></p>
+	  			</div>
+	  		</div>
+	  		<div class="separator u-margin-top-20">
+	  			<span class="line"></span><span class="text">¿QUE QUIERES HACER AHORA?</span><span class="line"></span>
+	  		</div>
+	  	</div>
+	  	<div class="u-padding-top-20" style="oferoverflow: hidden;">
+	  		<div class="grid-50">
+	        <a class='work-view'>
+	          <button class="button inline upload u-margin-top-30 upload_button">
+	            <i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
+	          </button>
+	        </a>
+	  		</div>
+	  		<div class="grid-50">
+	  			<a class="work-edit">
+	          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA</button>
+	  			</a>
+	  		</div>
+	  		<div class="grid-50">
+	  			<a class='work-new'>
+	          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA</button>
+	  			</a>
+	  		</div>
+	  		<div class="grid-50">
+	  			<!-- <button class="button inline upload u-margin-top-30 upload_button work-delete" data-color="red">
+	  				<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
+	  			</button> -->
+	        <button class="button inline upload work-delete trash" style="border: none; box-shadow: none;">
+	          <i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR
+	        </button>
+					<div class="edit-options work-delete-confirm hide">
+						ELIMINAR? &nbsp;
+						<i class="bi_interface-box-tick work-delete-force save-icon" style="display: inline;"></i>
+						<i class="bi_interface-box-cross work-delete-cancel cancel-icon" style="display: inline;"></i>
+					</div>
+	  		</div>
+	  	</div>
+		</div>
+	</div>
+</div>
+{% endblock %}
+
+
+{% block scripts %}
+    <script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
+    <script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/jquery-sortable/source/js/jquery-sortable-min.js"></script>
+    <script>
+      $.cloudinary.config({{cloudinary.config()|json|safe}});
+      var post = null;
+      var edit = {{edit|json|safe}};
+      if(edit) {
+        post = {{post|json|safe}}
+      }
+      $(function () {
+          new APP.CreatorPostScreen();
+      });
+    </script>
+{% endblock %}
