--- a/app/styles/tv-chapter.styl
+++ b/app/styles/tv-chapter.styl
@@ -14,19 +14,20 @@
 .description 
 	width 100%
 	display flex
+	padding 15px 0
 	justify-content space-around
 	align-items baseline
 	background-color rgba(0, 0, 0, 0.06)
 	&-likes
 		width 146px
-		height 82px
 		align-items space-around
-		justify-content space-around
+		justify-content space-between
 		display flex
 		flex-direction column
 		&-logos
 			display flex
-			justify-content space-around
+			width 60px
+			justify-content space-between
 		&-redes
 			display flex
 			justify-content space-around
@@ -40,7 +41,7 @@
 		display flex
 		flex-direction column
 		justify-content center
-		padding 25px 0px
+		padding 5px 0px
 	&-texto h3
 		font-family Montserrat
 		font-size 26px
@@ -53,27 +54,8 @@
 		margin 10px 5px 0
 	&-texto span
 		font-family sans-serif
-		font-size 12px
+		font-size 13px
 		color #000
-		margin 15px 5px 0
-.fa-heart
-	color red
-.fa-facebook
-	border-radius 47%
-	padding 10px
-	color #fff
-	width 15px
-	background-color #888
-.fa-twitter
-	border-radius 47%
-	padding 10px
-	color #fff
-	background-color #888
-.fa-instagram
-	border-radius 47%
-	padding 10px
-	color #fff
-	background-color #888
 .informacion h2
 	font-size 27px
 	font-family Montserrat
