--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,3 +1,7 @@
+.wrapper
+	max-width 1200px
+	position relative
+	margin 0 auto
 .container
 	width 100%
 	height 500px
@@ -17,10 +21,10 @@
 		font-weight bold
 	&-text p
 		z-index 2
-		font-size 22px
+		font-size 20px
 		text-align center
 		font-family PTSerif-Regular
-.container video
+.container iframe
 	width 100%
 	height 500px
 	position absolute
@@ -35,15 +39,22 @@
 	align-items	baseline
 	&-title
 		font-size 40px
-		padding 20px 360px 20px 120px
+		padding 20px 0px 20px 120px
 		font-family Montserrat
 		font-weight bold
 		color #fff
+		width 800px
+		z-index 2
 	&-item
 		padding 30px
 		color #fff
 		font-family Montserrat
 		font-size 13px
+		z-index 2
+a
+	z-index 2
+hr
+	margin-bottom 30px
 .subList li
 	z-index 2
 .buttom
@@ -58,32 +69,66 @@
 	border 1px solid #fff
 	padding 15px 20px
 	border-radius 40px
-	margin-left 25px
+	margin-right 100px
 .info h2
 	font-size 27px
 	font-family Montserrat
 	font-weight bold
-	padding 6px 0
+	padding 20px 0 0
 .likes
 	display flex
 	&-logo
-		width 160px
+		width 35px
 		display flex
+		margin-bottom 20px
 		align-items baseline
-		justify-content space-around
+		justify-content space-between
+.shadow
+	width 100%
+	height 500px
+	position absolute
+	left 0
+	top 0
+	background-color rgba(0, 0, 0, 0.8)
+.line
+	width 15px
+	border 2px solid #0000ff
+	margin-bottom 40px
 .info
-	padding 9px 80px
+	padding 9px 0
+	max-width 980px
+	margin 0 auto
+	&-text
+		display flex
+		justify-content space-between
+		padding-bottom 10px
+		border-bottom 1px solid #ececec
+		&-icon h3
+			margin-bottom 10px
+			font-size 12px
+			text-align center
+			font-family montserrat
+		&-icon
+			flex-direction column
+			display flex
+			align-items center
+			&-social
+				display flex
+				width 177px
+				justify-content space-around
 	&-data
 		width 100%
 		display flex
 		justify-content space-between
 		&-text
-			width 720px
+			width 680px
 			&-imagen
 				margin 15px 0
 			&-imagen img
 				height 353px
 				width 100%
+		&-text a
+			color #000
 		&-text video
 			width 100%
 			height 300px
@@ -92,6 +137,9 @@
 			padding 8px 0px
 		&-text h2
 			font-size 20px !important
+		&-text img
+			width 680px
+			height 400px
 		&-baners
 			width 240px
 			display flex
@@ -101,15 +149,9 @@
 				background-color #ececec
 				width 240px
 				height 350px
-				margin 20px 0
-	&-text
-		display flex
-		justify-content space-between
-		&-icon h3
-			margin-bottom 12px
-			&-social
-				display flex
-				justify-content space-around
+.inner-container
+	display flex
+	justify-content space-between
 .am-Footer
 	background #3c3d41
 	margin-top 200px
