add trailer migration

--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -11,7 +11,7 @@
 			<li class="subList-title">am tv</li>
 			<a href="#"><li class="subList-item contest">CONCURSO</li></a>
 		</ul>
-		<iframe src="https://www.youtube.com/embed/5iFv63DzD38?controls=0&showinfo=0&autoplay=1&theme=light&showinfo=0" ></iframe>
+		<iframe src="https://www.youtube.com/embed/5iFv63DzD7438734784874338?controls=0&showinfo=0&autoplay=1&theme=light&showinfo=0"></iframe>
 		<div class="container-text">
 			<h3>Que el arte inunde tu vida</h3>
 			<p>El primer programa de TV sobre los procesos de<br>artistas visuales</p>
