add photo column in chapters table

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2688,6 +2688,9 @@ white = #fff
 		color #555
 		font-size 14px
 		background white
+		
+	.description
+		height 200px
 
 	.input-modal
 		min-width 250px
