--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -90,10 +90,12 @@ hr
 	left 0
 	top 0
 	background-color rgba(0, 0, 0, 0.8)
-.line
+	
+.subline
 	width 15px
 	border 2px solid #0000ff
 	margin-bottom 40px
+	
 .info
 	padding 9px 0
 	max-width 980px
@@ -152,6 +154,3 @@ hr
 .inner-container
 	display flex
 	justify-content space-between
-.am-Footer
-	background #3c3d41
-	margin-top 200px
