--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -118,6 +118,10 @@
 			{% endif %}
 				<tr>
 					<td></td>
+					<td><a href="/tv">TV</a></td>
+				</tr>
+				<tr>
+					<td></td>
 					<td><a href="/works/category/all/page-1">OBRAS</a></td>
 				</tr>
 				<tr>
