delete and publish an chapter

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4759,8 +4759,8 @@ white = #fff
 			color #fc636b
 			border-color #fc636b
 		&.publish
-			color #b8fbbb
-			border-color #b8fbbb
+			color #277cea
+			border-color #277cea
 		&.am
 			color #ed86ff
 			border-color #ed86ff
