--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -51,7 +51,7 @@
 		font-family Montserrat
 		font-size 13px
 		z-index 2
-a
+.contest-btn
 	z-index 2
 hr
 	margin-bottom 30px
@@ -123,7 +123,6 @@ hr
 		display flex
 		justify-content space-between
 		&-text
-			width 680px
 			&-imagen
 				margin 15px 0
 			&-imagen img
@@ -140,8 +139,7 @@ hr
 		&-text h2
 			font-size 20px !important
 		&-text img
-			width 680px
-			height 400px
+			height auto
 		&-baners
 			width 240px
 			display flex
@@ -154,3 +152,12 @@ hr
 .inner-container
 	display flex
 	justify-content space-between
+	
+.draft-chapters-container
+	max-width 1200px
+	display flex
+	flex-wrap wrap
+	justify-content space-around
+	margin 0 auto
+	.info-data
+		max-width 500px
