--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -5,19 +5,36 @@
 {% endblock %}
 
 {% block elements %}
+
+{% if user && user.isAdmin %}
+	<div class="grid-container">
+		<div class="grid-100">
+		  <div class="blog-single-trash" style="max-width: initial;border: none;margin-bottom: 0;">
+		      <a href="/tv/creator" class="button following publish-btn publish">Nuevo capítulo</a>
+		      <a href="/tv/draft" class="button following preview-btn">Borradores</a>
+		  </div>
+		</div>
+	</div>
+{% endif %}
+
 <div class="wrapper">
 	<div class="container">
 		<ul class="subList">
 			<li class="subList-title">am tv</li>
-			<a href="#"><li class="subList-item contest">CONCURSO</li></a>
+			<a href="#" class="contest-btn"><li class="subList-item contest">CONCURSO</li></a>
 		</ul>
 
-		<iframe src="http://{{chapters[0].trailer}}?controls=0&showinfo=0&autoplay=1&theme=light&showinfo=0"></iframe>
+		{%if chapters[0] %}
+			{{chapters[0].trailer|safe}}
+		{% endif %}
+
 
 		<div class="container-text">
 			<h3>Que el arte inunde tu vida</h3>
 			<p>El primer programa de TV sobre los procesos de<br>artistas visuales</p>
-			<a href="/tv/chapter/{{chapters[0].nameSlugify}}"><div class="buttom">VER AHORA</div></a>
+			{%if chapters[0]%}
+				<a href="/tv/chapter/{{chapters[0].nameSlugify}}"><div class="buttom">VER AHORA</div></a>
+			{%endif%}
 		</div>
 		<div class="shadow"></div>
 	</div>
@@ -30,7 +47,7 @@
 			{% for item in chapters %}
 				<div class="info-data">
 					<div class="info-data-text">
-						<a href="/tv/chapter/{{item.nameSlugify}}"><img src="http://i.imgur.com/CM9zwAu.jpg"></a>
+						<a href="/tv/chapter/{{item.nameSlugify}}"><img src="{{item.photo|addFilter('w_680,h_400,c_limit')}}"></a>
 						<h2><a href="/tv/chapter/{{item.nameSlugify}}">{{ item.name }}</a></h2>
 						<p>{{ item.description }}</p>
 						<span>Por am tv  </span>  <span>  Emitido el 26 de julio,2016</span>
@@ -50,4 +67,7 @@
 	</div>
 </div>
 {% block scripts %}
+<script>
+console.log({{chapters|json|safe}});
+</script>
 {% endblock %}
