--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,163 +1,147 @@
-.wrapper
-	max-width 1200px
-	position relative
-	margin 0 auto
-.container
-	width 100%
-	height 500px
-	background-color #000
-	&-text
-		display flex
-		flex-direction column
-		z-index 2
-		color #fff
-		align-items center
-		margin-top 240px
-	&-text h3
-		z-index 2
-		font-size 44px
-		font-family montserrat
-		padding 5px 0
-		font-weight bold
-	&-text p
-		z-index 2
-		font-size 20px
-		text-align center
-		font-family PTSerif-Regular
-.container iframe
-	width 100%
-	height 500px
-	position absolute
-	left 0
-	top 0
-.container subBarra
-	width 100%
-	display flex
-	justify-content space-around
-.subList
-	display flex
-	align-items	baseline
-	&-title
-		font-size 40px
-		padding 20px 0px 20px 120px
-		font-family Montserrat
-		font-weight bold
-		color #fff
-		width 800px
-		z-index 2
-	&-item
-		padding 30px
-		color #fff
-		font-family Montserrat
-		font-size 13px
-		z-index 2
-.contest-btn
-	z-index 2
-hr
-	margin-bottom 30px
-.subList li
-	z-index 2
-.buttom
-	width 100px
-	font-family montserrat
-	background-color red
-	color #fff
-	z-index 2
-	padding 13px
-	margin 17px 0
-.contest
-	border 1px solid #fff
-	padding 15px 20px
-	border-radius 40px
-	margin-right 100px
-.info h2
-	font-size 27px
-	font-family Montserrat
-	font-weight bold
-	padding 20px 0 0
-.likes
-	display flex
-	&-logo
-		width 35px
-		display flex
-		margin-bottom 20px
-		align-items baseline
-		justify-content space-between
 .shadow
 	width 100%
-	height 500px
+	height 100%
 	position absolute
 	left 0
 	top 0
-	background-color rgba(0, 0, 0, 0.8)
-	
-.subline
-	width 15px
-	border 2px solid #0000ff
-	margin-bottom 40px
-	
-.info
-	padding 9px 0
-	max-width 980px
-	margin 0 auto
-	&-text
+	background-color rgba(0, 0, 0, 0.7)
+	header
+		max-width 1200px
+		margin 0 auto
+		margin-top 30px
 		display flex
+		align-items center
+		padding 0 20px
 		justify-content space-between
-		padding-bottom 10px
-		border-bottom 1px solid #ececec
-		&-icon h3
-			margin-bottom 10px
-			font-size 12px
+		h1
+			font-family 'Montserrat'
+			font-size 48px
+			line-height 1.2
+			letter-spacing -1.8px
+			color white
+		.contest-btn
+			opacity 0.6
+			border-radius 40px
+			border solid 1px #eeeeee
+			padding 15px 30px
+			font-family 'Montserrat'
+			font-size 11px
+			line-height 1
+			letter-spacing 2px
 			text-align center
-			font-family montserrat
-		&-icon
-			flex-direction column
-			display flex
-			align-items center
-			&-social
-				display flex
-				width 177px
-				justify-content space-around
-	&-data
-		width 100%
+			color white
+	.info
 		display flex
-		justify-content space-between
-		&-text
-			&-imagen
-				margin 15px 0
-			&-imagen img
-				height 353px
-				width 100%
-		&-text a
-			color #000
-		&-text video
-			width 100%
-			height 300px
-		&-text p
-			font-family PTSerif-Regular
-			padding 8px 0px
-		&-text h2
-			font-size 20px !important
-		&-text img
-			height auto
-		&-baners
-			width 240px
-			display flex
-			flex-direction column
-			&-view
-				border 1px solid #ececec
-				background-color #ececec
-				width 240px
-				height 350px
-.inner-container
+		flex-direction column
+		align-items center
+		position absolute
+		top 50%
+		left 50%
+		transform translate(-50%, -50%)
+		h1
+			font-family 'Montserrat'
+			font-size 48px
+			line-height 1.2
+			letter-spacing -1.8px
+			text-align center
+			color white
+			margin-bottom 15px
+		p
+			max-width 450px
+			opacity 0.7
+			font-family 'PT Serif'
+			font-size 20px
+			line-height 1.3
+			text-align center
+			color white
+			margin-bottom 20px
+		a
+			padding 10px 20px
+			color white
+			line-height 40px
+			border-radius 2px
+			background-color #fc2015
+			font-family 'Montserrat'
+			font-size 13px
+			line-height 1.8
+
+	
+.banners-container
+	display flex
+	height 150px
+	background-color #efeff0
+
+.latest-chapters
+	max-width 1200px
+	margin 0 auto
+	margin-top 30px
+	padding 10px 20px
+	h3
+		font-family 'Montserrat'
+		font-size 25px
+		color #202124
+		padding-bottom 10px
+		border-bottom 1px solid rgba(32,33,36, 0.2)
+	div
+		width 30px
+		height 3px
+		background-color blue
+
+.chapters-container
+	max-width 1200px
+	margin 0 auto
 	display flex
 	justify-content space-between
-	
-.draft-chapters-container
-	max-width 1200px
-	display flex
 	flex-wrap wrap
-	justify-content space-around
-	margin 0 auto
-	.info-data
-		max-width 500px
+	margin-top 30px
+
+.chapter
+	max-width 375px
+	display flex
+	flex-direction column
+	margin-bottom 40px
+	box-shadow 0 2px 4px 0 rgba(0,0,0,0.5)
+	.inner-content
+		padding 15px 20px
+		a
+			display block
+			font-family 'Montserrat'
+			font-size 16px
+			color black
+			margin-top 10px
+		.description
+			opacity 0.7
+			font-family 'PT Serif'
+			font-size 14px
+			line-height 1.5
+			color black
+			margin-top 10px
+		.metadata
+			display flex
+			padding-top 15px
+			justify-content space-between
+			align-items center
+			.date
+				font-family: 'PT Serif';
+				font-style: italic;
+				font-size: 12px;
+				color: #333;
+			.author
+				display flex
+				justify-content space-between
+				align-items center
+				p
+					font-family 'PT Serif'
+					font-size 12px
+					color #666d70
+					font-style italic
+				img
+					width 30px
+					height auto
+					border-radius 50%
+				span
+					font-family 'Montserrat'
+					font-weight bold
+					font-size 10px
+					color #3c3d41
+					letter-spacing 1px
