--- a/app/views/tv/index.html
+++ b/app/views/tv/index.html
@@ -2,72 +2,120 @@
 
 
 {% block styles %}
+<style>
+	.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
+</style>
 {% endblock %}
 
 {% block elements %}
 
 {% if user && user.isAdmin %}
 	<div class="grid-container">
-		<div class="grid-100">
-		  <div class="blog-single-trash" style="max-width: initial;border: none;margin-bottom: 0;">
-		      <a href="/tv/creator" class="button following publish-btn publish">Nuevo capítulo</a>
-		      <a href="/tv/draft" class="button following preview-btn">Borradores</a>
-		  </div>
-		</div>
+	<div class="grid-100">
+	  <div class="blog-single-trash" style="max-width: initial;border: none;margin-bottom: 0;">
+	      <a href="/tv/creator" class="button following publish-btn publish">Nuevo capítulo</a>
+	      <a href="/tv/draft" class="button following preview-btn">Borradores</a>
+	  </div>
+	</div>
 	</div>
 {% endif %}
 
-<div class="wrapper">
-	<div class="container">
-		<ul class="subList">
-			<li class="subList-title">am tv</li>
-			<a href="#" class="contest-btn"><li class="subList-item contest">CONCURSO</li></a>
-		</ul>
+<div class="video-container">
+	<div id="player"></div>
 
-		{%if chapters[0] %}
-			{{chapters[0].trailer|safe}}
-		{% endif %}
-
-
-		<div class="container-text">
-			<h3>Que el arte inunde tu vida</h3>
-			<p>El primer programa de TV sobre los procesos de<br>artistas visuales</p>
-			{%if chapters[0]%}
-				<a href="/tv/chapter/{{chapters[0].nameSlugify}}"><div class="buttom">VER AHORA</div></a>
-			{%endif%}
-		</div>
-		<div class="shadow"></div>
-	</div>
-	<div class="info">
-		<div class="info-text">
-			<h2>Últimos capítulos</h2>
-		</div><div class="subline"></div>
-	<div class="inner-container">
-		<div class="chapters-container">
-			{% for item in chapters %}
-				<div class="info-data">
-					<div class="info-data-text">
-						<a href="/tv/chapter/{{item.nameSlugify}}"><img src="{{item.photo|addFilter('w_680,h_400,c_limit')}}"></a>
-						<h2><a href="/tv/chapter/{{item.nameSlugify}}">{{ item.name }}</a></h2>
-						<p>{{ item.description }}</p>
-						<span>Por am tv  </span>  <span>  Emitido el 26 de julio,2016</span>
-						<div class="likes-logo">
-							<i class="bi_interface-view"></i><p>{{ item.views }}</p>
-						</div>
-					</div>
-				</div>
-			{% endfor %}
-		</div>
-			<div class="banners-container">
-				<div class="info-data-baners">
-						<div class="info-data-baners-view"></div>
-				</div>
-			</div>
+	<div class="shadow">
+		<header>
+			<h1>am tv</h1>
+			<a href="#" class="contest-btn">CONCURSO</a>
+		</header>
+		
+		<div class="info">
+			<h1>Que el arte inunde tu vida</h1>
+			<p>El primer programa de TV sobre los procesos de artistas visuales</p>
+			{% if chapters[0] %}
+			<a href="/tv/chapter/{{chapters[0].nameSlugify}}">VER AHORA</a>
+			{% endif %}
 		</div>
 	</div>
 </div>
+
+<div class="banners-container">
+	
+</div>
+
+
+<div class="latest-chapters">
+<h3>Últimos capítulos</h3>
+<div></div>
+</div>
+
+
+<div class="chapters-container">
+
+	{%  for chapter in chapters %}
+		<div class="chapter">
+			<a href="/tv/chapter/{{chapter.nameSlugify}}"><img src="{{chapter.photo}}"></a>
+			<div class="inner-content">
+				<a href="/tv/chapter/{{chapter.nameSlugify}}">{{ chapter.name }}</a>
+				<p class="description">{{ chapter.description.substring(0,140) }}...</p>
+				
+				<div class="metadata">
+					<p class="date"><i class="bi_interface-clock"></i>{{chapter.releaseDate|date('d/m/Y')}}</p>
+
+					<span class="author">
+		              <p>Por&nbsp;&nbsp;</p>
+		              <img src="{{amUser.photo}}"/>
+		              <span class="uppercase">&nbsp;
+		                {{amUser.fullname}}
+		              </span>
+		            </span>
+				</div>
+			</div>
+		</div>
+	{% endfor %} 
+</div>
+
+{% endblock %}
+
 {% block scripts %}
 <script>
-console.log({{chapters|json|safe}});
+		var lastChapter = {{chapters|json|safe}}[0];
+      var tag = document.createElement('script');
+      tag.src = "https://www.youtube.com/player_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+      var player;
+      function onYouTubePlayerAPIReady() {
+        player = new YT.Player('player', {
+          playerVars: {'controls':0, 'showinfo':0, 'autoplay': 1 },
+          videoId: lastChapter.trailer,
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange' : function(e){
+                if(e.data === YT.PlayerState.ENDED){
+                    player.loadVideoById(lastChapter.trailer);
+                 }
+             }
+          }
+      });
+      function onPlayerReady(event) {
+        event.target.mute();
+      }
+}
 </script>
 {% endblock %}
