--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -1,163 +1,99 @@
-.wrapper
-	max-width 1200px
-	position relative
-	margin 0 auto
-.container
+.wrapper-tv
 	width 100%
-	height 500px
-	background-color #000
-	&-text
-		display flex
-		flex-direction column
-		z-index 2
-		color #fff
-		align-items center
-		margin-top 240px
-	&-text h3
-		z-index 2
-		font-size 44px
-		font-family montserrat
-		padding 5px 0
-		font-weight bold
-	&-text p
-		z-index 2
-		font-size 20px
-		text-align center
-		font-family PTSerif-Regular
-.container iframe
-	width 100%
-	height 500px
-	position absolute
-	left 0
-	top 0
-.container subBarra
-	width 100%
-	display flex
-	justify-content space-around
-.subList
-	display flex
-	align-items	baseline
-	&-title
-		font-size 40px
-		padding 20px 0px 20px 120px
-		font-family Montserrat
-		font-weight bold
-		color #fff
-		width 800px
-		z-index 2
-	&-item
-		padding 30px
-		color #fff
-		font-family Montserrat
-		font-size 13px
-		z-index 2
-.contest-btn
-	z-index 2
-hr
-	margin-bottom 30px
-.subList li
-	z-index 2
-.buttom
-	width 100px
-	font-family montserrat
-	background-color red
-	color #fff
-	z-index 2
-	padding 13px
-	margin 17px 0
-.contest
-	border 1px solid #fff
-	padding 15px 20px
-	border-radius 40px
-	margin-right 100px
-.info h2
-	font-size 27px
-	font-family Montserrat
-	font-weight bold
-	padding 20px 0 0
-.likes
-	display flex
-	&-logo
-		width 35px
-		display flex
-		margin-bottom 20px
-		align-items baseline
-		justify-content space-between
-.shadow
-	width 100%
-	height 500px
-	position absolute
-	left 0
-	top 0
-	background-color rgba(0, 0, 0, 0.8)
-	
-.subline
-	width 15px
-	border 2px solid #0000ff
-	margin-bottom 40px
-	
-.info
-	padding 9px 0
-	max-width 980px
-	margin 0 auto
-	&-text
-		display flex
-		justify-content space-between
-		padding-bottom 10px
-		border-bottom 1px solid #ececec
-		&-icon h3
-			margin-bottom 10px
-			font-size 12px
-			text-align center
-			font-family montserrat
-		&-icon
-			flex-direction column
-			display flex
-			align-items center
-			&-social
-				display flex
-				width 177px
-				justify-content space-around
-	&-data
+	.banner-video-tv
 		width 100%
-		display flex
-		justify-content space-between
-		&-text
-			&-imagen
-				margin 15px 0
-			&-imagen img
-				height 353px
-				width 100%
-		&-text a
-			color #000
-		&-text video
+		height auto
+		background-color #d8d8d8
+		position relative
+		.background-video-tv
 			width 100%
-			height 300px
-		&-text p
-			font-family PTSerif-Regular
-			padding 8px 0px
-		&-text h2
-			font-size 20px !important
-		&-text img
 			height auto
-		&-baners
-			width 240px
-			display flex
-			flex-direction column
-			&-view
-				border 1px solid #ececec
-				background-color #ececec
-				width 240px
-				height 350px
-.inner-container
-	display flex
-	justify-content space-between
-	
-.draft-chapters-container
-	max-width 1200px
-	display flex
-	flex-wrap wrap
-	justify-content space-around
-	margin 0 auto
-	.info-data
-		max-width 500px
+			position absolute
+			.container-video-tv
+				position relative
+				padding-bottom 56.25%
+				padding-top 30px
+				height 0
+				overflow hidden
+			.container-video-tv iframe, .container-video-tv object, .container-video-tv embed
+				position absolute
+				top 0
+				left 0
+				width 100%
+				height 100%
+		.shadow-video-tv
+			background-color rgba(0,0,0,0.6)
+			width 100%
+			height 100%
+			position relative
+			.menu-video-tv
+				display flex
+				align-items center
+				justify-content space-between
+				box-sizing border-box
+				padding 0 20px
+				max-width 1200px
+				margin 0 auto
+				font-family Montserrat
+				font-weight bold
+			.menu-video-tv h3
+				font-size 48px
+				color #eeeeee
+				margin 42px 0 0 0
+			.menu-video-tv a
+				border 1px solid #eeeeee
+				padding 18px 31px
+				border-radius 48px
+				margin 42px 0 0 0
+				color #eeeeee
+				font-size 10px
+			.text-video-tv
+				max-width 1200px
+				text-align center
+				position absolute
+				bottom 0
+				left 50%
+				transform translateX(-50%)
+				margin-bottom 51px
+			.text-video-tv h3
+				font-family Montserrat
+				font-weight bold
+				color #ffffff
+				font-size 48px
+				line-height 1.22
+				letter-spacing -1.8px
+				margin-bottom 15px
+			.text-video-tv p
+				font-family Montserrat
+				color #ffffff
+				font-size 20px
+				line-height 1.3
+				margin-bottom 31px
+				opacity 0.7
+			.text-video-tv a
+				font-family Montserrat
+				font-weight bold
+				padding 11px 14px
+				border-radius 2px
+				color #eeeeee
+				font-size 13px
+				background-color #fc2015
+	.chapters-tv
+		max-width 1200px
+		margin 0 auto
+		.title-chapters-tv
+			border-bottom 1px solid rgba(0 0 0 0.2)
+		.title-chapters-tv::after
+			border-bottom 2px solid #0000ff
+			width 30px
+			display block
+			content ""
+		.title-chapters-tv h4
+			font-family Montserrat
+			font-weight bold
+			color #202124
+			font-size 25px
+			text-align left
+
+
+
