--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -35,9 +35,16 @@
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-70917306-1', 'auto');
-	  ga('send', 'pageview');
-
+	  ga('send', 'pageview');	  
 	</script>
+	
+	<script type="text/javascript">
+	setTimeout(function(){var a=document.createElement("script");
+	var b=document.getElementsByTagName("script")[0];
+	a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0052/6659.js?"+Math.floor(new Date().getTime()/3600000);
+	a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+	</script>
+
 	<!-- Google Tag Manager -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KFM6ZZ"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
